new editor - createdMemeClipboard: nachdem auf generate geklickt wird im editor wird user auf diese seite weitergelitet wo das fertige meme angezeigt wird (eiegntlich ist hier noch eine funktion, die die url kopiert das funktioniert momentan nicht, ist aber nicht so wichtig)

--- a/src/Components/Editor.css
+++ b/src/Components/Editor.css
@@ -3,15 +3,11 @@
 }
 
 /*style of skip button to switch between memes */
-.Upload{
+.skip{
     background-color: black;
 }
 
 /*style of  button to generate memes */
 .generate {
     background-color: coral;
-}
-.Buttonlink{
-    color: black;
-    text-decoration: none;
 }
